@@ -1,3 +1,8 @@
+2003-07-21  Alasdair Allan <aa@astro.ex.ac.uk>
+
+         * Build.pm: Added failure_response(), update_response() and
+           complete_response() messages.
+           
 2003-07-20  Alasdair Allan <aa@astro.ex.ac.uk>
 
          * Build.pm: Added reject_response() and confirm_response()
